--- a/style.css
+++ b/style.css
@@ -44,6 +44,10 @@ body {
 
 }
 
+.container.show-nav .circle {
+    transform: rotate(-70deg);
+}
+
 .circle button{
     cursor: pointer;
     position: absolute;
@@ -71,6 +75,11 @@ body {
     top: 60%;
     transform: rotate(90deg);
     transform-origin: top left;
+}
+
+.container.show-nav + nav li{
+    transform: translateX(0);
+    transition-delay: 0.3s;
 }
 
 nav{
@@ -104,6 +113,18 @@ nav ul li i {
     font-size: 20px;
     margin-right: 10px;
 }
+
+nav ul li + li {
+    margin-left :15px;
+    transform: translateX(-150%);
+}
+nav ul li + li+ li {
+    margin-left :30px;
+    transform: translateX(-200%);
+}
+
+
+
 
 .content img {
     max-width: 100%;
